--- a/build
+++ b/build
@@ -2,8 +2,11 @@
 
 : ${DOCKER_USER:? required}
 
-dep ensure -v
+export GO111MODULE=on 
+export GOPROXY=https://goproxy.cn
+# build webhook
 CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o admission-webhook-example 
+# build docker image
 docker build --no-cache -t ${DOCKER_USER}/admission-webhook-example:v1 .
 rm -rf admission-webhook-example
 
