--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: admission-webhook-example
     spec:
+      serviceAccount: admission-webhook-example-sa
       containers:
         - name: admission-webhook-example
           image: cnych/admission-webhook-example:v1
