--- a/build
+++ b/build
@@ -1,13 +1,12 @@
 #!/bin/bash
 
-: ${DOCKER_USER:? required}
+set -e
 
 export GO111MODULE=on 
-export GOPROXY=https://goproxy.cn
 # build webhook
 CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o admission-webhook-example 
 # build docker image
-docker build --no-cache -t ${DOCKER_USER}/admission-webhook-example:v1 .
+docker build --no-cache -t ccr.ccs.tencentyun.com/keyangxie/admission-webhook-example .
 rm -rf admission-webhook-example
 
-docker push ${DOCKER_USER}/admission-webhook-example:v1
+docker push ccr.ccs.tencentyun.com/keyangxie/admission-webhook-example
